--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,15 +1,31 @@
 <nav class="navbar navbar-inverse">
   <div class="navbar-title">
     <%= link_to "MY CHINAMPA", root_path %>
+  </div> 
+  <div class="navbar-links">
+    <%= link_to "My Catalogue", user_plants_path %> 
   </div>
   <div class="navbar-links">
-    <%= link_to "Catalogue", user_plants_path %>
+    <%= link_to "Add Plant", plants_path %> 
   </div>
   <div class="navbar-links">
-    <%= link_to "Add Plant", plants_path %>
+    <%= link_to "Browse", plants_path %> 
   </div>
-  <div class="navbar-links">
-    <%= link_to "Browse", root_path %>
+  <div class="nav-item dropdown">
+    <% if user_signed_in? %>
+      <%= image_tag "chris.jpg", class: "dropdown-toggle avatar-bordered", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "Home", root_path, class: "dropdown-item" %>
+          <%= link_to "Add Plant", plants_path, class: "dropdown-item" %>
+          <%= link_to "My Catalogue", user_plants_path, class: "dropdown-item" %>
+          <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+        </div>
+    <% else %>
+      <%= image_tag "avatar_default.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "Log in", new_user_session_path, class: "dropdown-item" %>
+          <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %>
+        </div>  
+    <% end %>  
   </div>
 </nav>
-
