--- a/app/views/user_plants/_form.html.erb
+++ b/app/views/user_plants/_form.html.erb
@@ -8,7 +8,7 @@
     </div>
     
     <div class="form-actions">
-      <%= f.button :submit %>
+      <%= f.button :submit, class: "btn name-plant-button" %>
     </div>
   <% end %>
 </div>
