--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "log out", destroy_user_session_path, method: :delete %>
+
 <div class="homepage-banner">
   <div>
     <div class="slogan-text-1">
@@ -13,7 +15,8 @@
 
   <% if user_signed_in? == false %>
     <div class="home-form-style">
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="errors-signup"></div>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), remote: true) do |f| %>
         <%= f.error_notification %>
         <div class="container">
           <div class="form-inputs">
@@ -71,7 +74,8 @@
                 <div class="row">
                   <h2 class="col-12 d-flex justify-content-center" id="login-title-in-modal">Welcome back !</h2>
                 </div>
-                  <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+                <div class="errors-in-modal"></div>
+                  <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name), remote: true) do |f| %>
                     <div class="form-inputs">
                       <div class="row">
                         <div class="col-12 d-flex justify-content-center">
