--- a/app/views/devise/registrations/new.js.erb
+++ b/app/views/devise/registrations/new.js.erb
@@ -1,2 +1,1 @@
-const errorMessageSignUp = document.querySelector('.errors-signup')
-errorMessageSignUp.innerHTML = "<p>Incorrect Email/Password</p>"
+alert('invalid');
