--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,7 @@
 <nav class="navbar navbar-inverse">
+  <div>
+    <%= image_tag("chinampa_logo_sq.png", height: 60, width: 60, alt: "rss feed")%>
+  </div>
   <div class="navbar-title">
     <%= link_to "MY CHINAMPA", root_path %>
   </div> 
@@ -9,10 +12,10 @@
     <%= link_to "Add Plant", plants_path %> 
   </div>
   <div class="navbar-links">
-    <%= link_to "Browse", plants_path %> 
+    <%= link_to "Tutorials", plants_path %> 
   </div>
   <div class="nav-item dropdown">
-    <% if user_signed_in? %>
+    <% if current_user %>
       <%= image_tag "chris.jpg", class: "dropdown-toggle avatar-bordered", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Home", root_path, class: "dropdown-item" %>
@@ -25,7 +28,9 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Log in", new_user_session_path, class: "dropdown-item" %>
           <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %>
-        </div>  
-    <% end %>  
+        </div>
+      <% end %>  
   </div>
 </nav>
+
+<%# user_signed_in? %>
