--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,23 +1,18 @@
 .custombtn {
-  background-color: $light-green;
+  background-color: $green-banner;
   color: $white-green;
-  border: 3px solid $light-green;
-  border-radius: 12px !important;
-  padding: 5px;
+  border: 3px solid $green-banner;
+  border-radius: 4px !important;
   text-decoration: none;
   cursor: pointer;
-  width: 110px !important;
-  height: 45px !important;
-  font-size: 8px !important;
+  width: 150px;
+  height: 40px !important;
+  font-size: 12px !important;
   font-family: $links;
   text-align: center;
-  margin-top: 2px;
-  margin-left: 2px;
-  margin-right: 2px;
-  margin-bottom: 2px;
   &:hover {
     background-color: $white-green;
-    border: 3px solid $light-green;
+    border: 3px solid $green-banner;
     color: $light-gray-green;
     transition-duration: 0.7s;
     text-decoration: none;
@@ -37,10 +32,6 @@
   font-size: 12px !important;
   font-family: $links;
   text-align: center;
-  margin-top: 2px;
-  margin-left: 2px;
-  margin-right: 2px;
-  margin-bottom: 2px;
   &:hover {
     background-color: $white-green;
     border: 3px solid $light-green;
@@ -73,40 +64,5 @@ margin-bottom: 2px;
   color: $white-green;
   transition-duration: 0.7s;
   text-decoration: none;
+  }
 }
-}
-
-// SPORTIX BUTTONS TEMPLATES, PLEASE IGNORE
-
-// .calltoaction {
-//   color: #f8e1cd;
-//   font-style: italic;
-//   &:hover {
-//     transition-duration: 0.3s;
-//     text-decoration: none;
-//   }
-// }
-
-// .changemindbtn {
-//   background-color: white;
-//   color: $lightorange ;
-//   text-align: center;
-//   border-radius: 3px !important;
-//   padding: 10px;
-//   text-decoration: none;
-//   cursor: pointer;
-//   width: 100% !important;
-//   font-size: 10px !important;
-//   text-transform: uppercase;;
-//   &:hover {
-//     background-color: white;
-//     color: $lightorange;
-//     transition-duration: 0.3s;
-//     text-decoration: none;
-//   }
-// }
-
-// .update-text-color input {
-//   color: white !important;
-// }
-
