--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -1,8 +1,8 @@
 <div class="search-container">
-  <div class="container mt-4 p-4">
+  <div class="container p-4">
     <div class="d-flex flex-row bd-highlight justify-content-between">
-      <div class="m-4 bd-highlight"> 
-      <h1 class="catalogue-slogan-text">My <br> &nbsp; &nbsp; catalogue</h1>
+      <div class="bd-highlight">
+        <h1 class="catalogue-slogan-text">My <br> &nbsp; &nbsp; catalogue</h1>
       </div>
     <!--  <div class="m-4 bd-highlight"><%= link_to "ADD A PLANT", plants_path, class: "btn mb-2" %></div>  -->
       <div class="m-4 bd-highlight flex-grow-1 ">
@@ -40,7 +40,7 @@
                 <div class="bd-highlight mr-2"><i class="fas fa-tint">  Every <%= plant.plant.water_frequency %> days</i></div>
                 <div class="bd-highlight"><i class="fas fa-sun">  <%= plant.plant.light_frequency %>h/day</i></div>
               </div>
-              <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn btn-info", onclick:"event.stopPropagation(); confirm('Do not let this happen next time!')" %>
+              <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn custombtn mt-3", onclick:"event.stopPropagation(); confirm('Do not let this happen next time!')" %>
             </div>
           </div>
         <% end %>
