--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -37,10 +37,11 @@
               <h4><%= plant.nickname.upcase %></h4>
               <p><%= plant.family.name %></p>
               <div class="d-flex icone">
-                <div class="bd-highlight mr-2"><i class="fas fa-tint">  Every <%= plant.plant.water_frequency %> days</i></div>
-                <div class="bd-highlight"><i class="fas fa-sun">  <%= plant.plant.light_frequency %>h/day</i></div>
+                <div class="bd-highlight "><i class="fas fa-tint">    Every <%= plant.plant.water_frequency %> days</i></div>
+                <div class="bd-highlight mr-2 ml-2"><i class="fas fa-sun">    <%= plant.plant.light_frequency %>h/day</i></div>
+                <div class="bd-highlight"><i class="fas fa-radiation-alt">    Every <%= plant.plant.fertilizer_frequency %> months</i></div>
               </div>
-              <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn custombtn mt-3", onclick:"event.stopPropagation(); confirm('Do not let this happen next time!')" %>
+              <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn custombtn mt-3", onclick:"event.stopPropagation(), confirm('Do not let this happen next time!')" %>
             </div>
           </div>
         <% end %>
