--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -8,12 +8,12 @@
   height: 40px !important;
   font-size: 12px !important;
   font-family: $links;
-  text-align: center;
+  height: 32px !important;
   &:hover {
     background-color: $white-green;
     border: 1px solid $mid-green;
     color: $mid-green;
-    transition-duration: 0.7s;
+    transition-duration: 0.3s;
     text-decoration: none;
   }
 }
