--- a/app/assets/stylesheets/components/_slogan.scss
+++ b/app/assets/stylesheets/components/_slogan.scss
@@ -21,3 +21,13 @@
   padding-left: 130px;
   margin-top: 0px;
 }
+
+.catalogue-slogan-text {
+  color:rgb(255, 255, 255);
+  opacity: 80%;
+  font-family: $titles;
+  font-size: 60px;
+  font-weight: bold;
+  padding-left: 5px;
+  line-height: 35px;
+}
