--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container p-4">
     <div class="d-flex flex-row bd-highlight justify-content-between">
       <div class="bd-highlight">
-        <h1 class="catalogue-slogan-text">My <br> &nbsp; &nbsp; catalogue</h1>
+        <h1 class="mt-4 catalogue-slogan-text">My <br> &nbsp; &nbsp; catalogue</h1>
       </div>
     <!--  <div class="m-4 bd-highlight"><%= link_to "ADD A PLANT", plants_path, class: "btn mb-2" %></div>  -->
       <div class="m-4 bd-highlight flex-grow-1 ">
@@ -39,7 +39,7 @@
               <div class="d-flex icone">
                 <div class="bd-highlight "><i class="fas fa-tint">    Every <%= plant.plant.water_frequency %> days</i></div>
                 <div class="bd-highlight mr-2 ml-2"><i class="fas fa-sun">    <%= plant.plant.light_frequency %>h/day</i></div>
-                <div class="bd-highlight"><i class="fas fa-radiation-alt">    Every <%= plant.plant.fertilizer_frequency %> months</i></div>
+                <div class="bd-highlight"><i class="fas fa-seedling">    Every <%= plant.plant.fertilizer_frequency %> months</i></div>
               </div>
               <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn custombtn mt-3", onclick:"event.stopPropagation(), confirm('Do not let this happen next time!')" %>
             </div>
