--- a/app/views/user_plants/new.html.erb
+++ b/app/views/user_plants/new.html.erb
@@ -1,10 +1,10 @@
 <div class="name-plant-container">
-  <div class="container mt-4 p-4">
-    <h3 class="name-plant-text">Give your plant a name!</h3>
+  <div class="container p-4">
+    <h3 class="mt-4 catalogue-slogan-text">Give your <br> &nbsp; &nbsp; &nbsp; &nbsp; plant a nickname!</h3>
   </div>
 </div>
 
-  <div class="container">
+  <div class="container mb-5">
     <div class="row">
       <div class="col-sm">
          <div class="p-2 bd-highlight box-form"><%= render 'form'%></div>
