--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,9 +1,10 @@
 <div class="search-container">
   <div class="container p-4">
     <div class="mt-4 d-flex flex-row bd-highlight justify-content-between">
-      <div class="mt-2 bd-highlight"> <h1 class="catalogue-slogan-text">Add <br> &nbsp; &nbsp; &nbsp;a plant</h1></div>
+      <div class="mt-2 bd-highlight">
+        <h1 class="catalogue-slogan-text">Add <br> &nbsp; &nbsp; &nbsp;a plant</h1>
+    </div>
       <div class="m-4 bd-highlight flex-grow-1 ">
-
       <!-- search form -->
         <div class="d-flex ml-4">
           <div class="flex-fill bd-highligh mr-2">
