--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -1,6 +1,6 @@
 <div class="search-container">
   <div class="container p-4">
-    <div class="d-flex flex-row bd-highlight justify-content-between">
+    <div class="mt-4 d-flex flex-row bd-highlight justify-content-between">
       <div class="bd-highlight">
         <h1 class="mt-4 catalogue-slogan-text">My <br> &nbsp; &nbsp; catalogue</h1>
       </div>
