changed footer + other stuff

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alatsi&family=Montserrat&family=Poppins&display=swap');
 
 $titles: "Montserrat";
-$paragraphs: "Alatsi";
+$paragraphs: "Work Sans";
 $links: "Poppins";
 $body-font: "Work Sans", "Helvetica", "sans-serif";
 $headers-font: "Nunito", "Helvetica", "sans-serif";
