--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,8 @@
 // Specific CSS for your home-page
+.homepage-banner {
+  p {
+    color: white;
+    font-size: 22px;
+    font-family: "Montserrat";
+  }
+}
