--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer-colour">
   <div class="container">
-        <div class="row text-center d-flex justify-content-center pt-5 mb-3">
+        <!--- <div class="row text-center d-flex justify-content-center pt-5 mb-3">
           <div class="col-md-2 mb-3">
             <div class="footer-links">
               <a href="#!">Shop</a>
@@ -11,23 +11,17 @@
               <a href="#!">About us</a>
             </div>
           </div>
-        </div>
-        <hr class="rgba-white-light" style="margin: 0 15%;">
-        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
-          <div class="col-md-8 col-12 mt-5">
-            <div style="line-height: 1.7rem">My Chinampa is the place where you can find the best caring tips for your plants.<br>We are proud to
-                                          share with you the best tips proven by our founders on how to look after your precious plants.</div>
+        </div> --->
+        <div class="row d-flex text-center justify-content-center">
+          <div class="col-md-8 col-12 m-5">
+            <div style="line-height: 1.7rem"> <p>My Chinampa is the place where you can find the best caring tips for your plants.<br>We are proud to
+                                          share with you the best tips proven by our founders on how to look after your precious plants.</p></div>
           </div>
         </div>
         <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
-        <div class="row pb-3">
-          <div class="col-md-12">
-            <div class="mb-5 flex-center">
-            </div>
-          </div>
-        </div>
-  </div>
-  <div class="footer-copyright text-center py-3 links footer-links">© 2020 Copyright:<br>
+        <hr class="rgba-white-light" style="margin: 0 15%;">
+
+  <div class="footer-copyright text-center py-3 links footer-links mt-2">© 2020 Copyright<br>
     <a href="#!">My Chinampa.com</a>
   </div>
 </div>
