--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,12 +2,11 @@
   font-family: $paragraphs;
 }
 
-.reminders-big-card {
+.reminders-card {
   border: none;
   margin: auto;
   padding: 15px;
   border-radius: 6px;
-  width: 90%;
   box-shadow: -5px -5px 20px 2px rgba(0,0,0,0.1);
 
   &:hover {
