--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="homepage-banner">
-  <div>
+  <div class="d-flex flex-column align-items-center">
     <div class="slogan-text-1">
       EASY
       <br>
