--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -28,7 +28,7 @@
           <div class="card myplantcard-add-plant">
             <img src="<%= api_plant.api_photo %>" class="img-fluid rounded" alt="Responsive image">
             <div class="text p-3">
-              <h4><%= api_plant.name.upcase %></h4>
+              <h4><%= api_plant.name %></h4>
               <p><%= api_plant.family.name %></p>
               <%= link_to "Add to collection", new_plant_user_plant_path(api_plant), class: "btn custombtn btn-block" %>
             </div>
