--- a/app/views/user_plants/new.html.erb
+++ b/app/views/user_plants/new.html.erb
@@ -10,8 +10,8 @@
          <div class="p-2 bd-highlight box-form"><%= render 'form'%></div>
       </div>
       <div class="col-sm">
-        <div class="card myplantcard-name-page">
-          <img src="<%= @api_plant.api_photo %>" class="img-fluid rounded" alt="Responsive image">
+        <div class="card myplantcard-name">
+          <img src="<%= @api_plant.api_photo %>" class="img-fluid rounded-top" alt="Responsive image">
           <div class="text p-3">
             <h4><%= @api_plant.name %></h4>
             <p><%= @api_plant.family.name %></p>
