--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -49,11 +49,11 @@
         <br>
         <p class="text-justify">
           Here are some tips that will help you care for indoor plants:
-          <ul>
-            <li> Keep potting soil moist- It’s important to make sure soil is not too wet nor too dry
-            <li> Make sure the plant pot has drainage holes in the bottom of the pot
-            <li> Place your plant near a light source, whether it’s natural or artificial
-            <li> Determine what species of plant you have so you can accurately care for it
+          <ul><p>
+            <li>Keep potting soil moist- It’s important to make sure soil is not too wet nor too dry
+            <li>Make sure the plant pot has drainage holes in the bottom of the pot
+            <li>Place your plant near a light source, whether it’s natural or artificial
+            <li>Determine what species of plant you have so you can accurately care for it</p>
           </ul>
         </p>
       </div>
