--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -18,6 +18,27 @@
   }
 }
 
+.sign-custombtn {
+  background-color: $mid-green;
+  color: $white-green;
+  border-radius: 4px !important;
+  text-decoration: none;
+  cursor: pointer;
+  width: 150px;
+  height: 40px !important;
+  font-size: 14px !important;
+  font-family: $links;
+  height: 36px !important;
+  margin-top: 8px;
+  &:hover {
+    background-color: $white-green;
+    border: 1px solid $mid-green;
+    color: $mid-green;
+    transition-duration: 0.3s;
+    text-decoration: none;
+  }
+}
+
 .addbtn {
   background-color: $mid-green;
   color: $white-green;
