--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -40,11 +40,11 @@
                 <div class="bd-highlight mr-2 ml-2"><i class="fas fa-sun">    <%= plant.plant.light_frequency %>h/day</i></div>
                 <div class="bd-highlight"><i class="fas fa-seedling">    Every <%= plant.plant.fertilizer_frequency %> months</i></div>
               </div>
-              <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn custombtn mt-3", onclick:"event.stopPropagation(); confirm:'Sure about that? Do not let it die next time!'"%>
+              <%= button_to 'I killed my plant 😱', user_plant_path(plant), method: :delete, class: "btn custombtn mt-3",
+                                                                      onclick:"event.stopPropagation(), confirm('Do not let this happen next time!')"%>
             </div>
           </div>
         <% end %>
-
       </div>
     <% end %>
   </div>
