--- a/app/views/user_plants/_form.html.erb
+++ b/app/views/user_plants/_form.html.erb
@@ -2,7 +2,7 @@
   <%= simple_form_for [@api_plant, @user_plant] do |f| %>
     <div class="form-inputs">
       <%= f.input :nickname %>
-      <%= f.input :photo, as: :file %>
+      <%= f.input :photo, as: :file, required: true %>
       <%= f.input :plant_id, :as => :hidden %>
     </div>
     <div class="form-actions">
