fixed the navbar avatar and the home sign up form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,6 +48,11 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="form-item col-12">
+              <%= f.input :photo, as: :file %>
+            </div>
+          </div>
           <div class="row d-flex justify-content-center" id="sign-up-btn">
             <div class="form-actions btn btn-primary btn-block custombtn col-10">
               <%= f.button :submit, "Sign up" %>
