--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
                       input_html: { autocomplete: "email" }%>
           <%= f.input :first_name,
                       required: false,
-                      hint: "optionnal",
+                      hint: "optional",
                       input_html: { autocomplete: "first_name" } %>
           <%= f.input :password,
                       required: true,
@@ -23,6 +23,7 @@
           <%= f.input :password_confirmation,
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
+          <%= f.input :photo, as: :file %>
         </div>
 
         <div class="form-actions btn btn-primary btn-block">
