--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="row d-flex justify-content-center">
-              <%= f.button :submit, "Sign up", class:"btn sign-custombtn btn-block %>
+              <%= f.button :submit, "Sign up", class:"btn sign-custombtn btn-block" %>
           </div>
         <% end %>
         <div class="flex-column">
