--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -1,4 +1,4 @@
-<div class="tutorial-container">
+<div class="banner-container">
   <div class="container p-4">
     <h3 class="mt-4 catalogue-slogan-text">Plant care <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; tutorials</h3>
   </div>
