--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -1,4 +1,4 @@
-<div class="search-container">
+<div class="banner-container">
   <div class="container p-4">
     <div class="mt-4 d-flex flex-row bd-highlight justify-content-between">
       <div class="bd-highlight">
