--- a/app/views/user_plants/new.html.erb
+++ b/app/views/user_plants/new.html.erb
@@ -1,4 +1,4 @@
-<div class="name-plant-container">
+<div class="banner-container">
   <div class="container p-4">
     <h3 class="mt-4 catalogue-slogan-text">Give your <br> &nbsp; &nbsp; &nbsp; &nbsp; plant a nickname!</h3>
   </div>
