--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -40,3 +40,16 @@
   color:rgb(255, 255, 255);
   font-family: $paragraphs;
 }
+
+.banner-container {
+  background-image:
+    // linear-gradient(to bottom, rgba(183, 216, 185, 0.137), rgba(131, 184, 131, 0.260)),
+    url('https://images.unsplash.com/photo-1464263866732-138a1da44860?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1652&q=80');
+  background-position: center;
+  background-size: cover;
+  height: 180px;
+  box-shadow: 2px 2.2px 2.2px $dark-gray-green;
+  margin-bottom: 50px;
+  justify-content: center;
+  align-items: center;
+}
