adding btn and style the form

--- a/app/assets/stylesheets/components/_box_form.scss
+++ b/app/assets/stylesheets/components/_box_form.scss
@@ -2,9 +2,9 @@
   width:80%;
   height: 350px;
   background-color: $mid-green;
-  border : 1px solid $mid-green;
-  opacity: 80%;
+  border : 0.5px solid $mid-green;
+  // opacity: 80%;
   color: white;
   // box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
-  border-radius: 4px;
+  border-radius: 2px;
 }
