--- a/app/views/user_plants/_form.html.erb
+++ b/app/views/user_plants/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container"><br>
   <%= simple_form_for [@api_plant, @user_plant] do |f| %>
     <div class="form-inputs">
       <%= f.input :nickname %>
@@ -6,7 +6,11 @@
       <%= f.input :plant_id, :as => :hidden %>
     </div>
     <div class="form-actions">
-      <%= f.button :submit, class: "btn name-plant-button" %>
+      <br><br>
+      <div class="d-flex flex-column align-items-center">
+        <%= f.submit "ADD YOUR NEW PLANT", class: "btn formbtn btn-block" %>
+        <%= link_to "Oh no, it's the wrong plant", plants_path, class:"linkform" %><br/>
+      </div>
     </div>
   <% end %>
 </div>
