--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,11 +5,11 @@
   background-image:
     linear-gradient(to bottom, rgba(20, 238, 38, 0.082), rgba(17, 68, 10, 0.205)),
     url('https://images.unsplash.com/photo-1514192497895-875274f82835?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
-    background-position: center;
+  background-position: center;
   background-size: cover;
-  height: 500px;
   margin-top: 0;
-  padding-top: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .form-group {
