added btn to errors pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,9 +53,7 @@
               <%= f.input :photo, as: :file %>
             </div>
           </div>
-          <div class="row d-flex justify-content-center">
-              <%= f.button :submit, "Sign up", class:"btn sign-custombtn btn-block" %>
-          </div>
+          <%= f.button :submit, "Sign up", class:"btn custombtn btn-block" %>
         <% end %>
         <div class="flex-column">
           <div class="col-12 d-flex justify-content-center" id="sign-in-paragraph">Already have an account?</div>
