--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -22,12 +22,12 @@
   </div>
 </div>
   <div class="container">
-    <div class="add-text">
-      <h2><strong>Only two steps away from happy and healthy plants!</strong></h2><br>
+    <div class="text">
+      <h2 style="color:#015D3A;"><strong>Only two steps away from happy and healthy plants!</strong></h2><br>
       <ul>
-        <p>1. Choose in this catalog the plant which corresponds to yours</p>
-        <p>2. Give it his/her nickname and don't forget to add his picture!</p>
-      </ul><br>
+        <p>1. Choose in this catalog the plant which corresponds to yours. The search bar is there to help you 👆</p>
+        <p>2. Give it a nickname and don't forget to add a picture!</p>
+      </ul><br><br>
     </div>
     <div class="row">
       <% @api_plants.each do |api_plant| %>
