--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -6,9 +6,9 @@
   cursor: pointer;
   width: 150px;
   height: 40px !important;
-  font-size: 12px !important;
+  font-size: 14px !important;
   font-family: $links;
-  height: 32px !important;
+  height: 34px !important;
   &:hover {
     background-color: $white-green;
     border: 1px solid $mid-green;
@@ -29,6 +29,25 @@
   font-size: 14px !important;
   font-family: $links;
   height: 32px !important;
+  &:hover {
+    background-color: $white-green;
+    border: 1px solid $mid-green;
+    color: $mid-green;
+    transition-duration: 0.3s;
+    text-decoration: none;
+  }
+}
+
+.errorbtn {
+  background-color: $mid-green;
+  color: $white-green;
+  border-radius: 4px !important;
+  text-decoration: none;
+  cursor: pointer;
+  width: 100%;
+  font-size: 20px !important;
+  font-family: $links;
+  padding: 10px;
   &:hover {
     background-color: $white-green;
     border: 1px solid $mid-green;
