--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="row">
-      <%= link_to "My Chinampa's homepage", root_path, class: 'link-to-homepage btn btn-primary btn-block m-5' %>
+      <%= link_to "My Chinampa's homepage", root_path, class:'btn errorbtn' %>
     </div>
   </div>
 </div>
