--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="row">
-      <%= link_to "My Chinampa's homepage", root_path, class: 'link-to-homepage btn btn-primary btn-block m-5' %>
+      <%= link_to "My Chinampa's homepage", root_path, class: 'link-to-homepage btn errorbtn' %>
     </div>
   </div>
 </div>
