--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -97,7 +97,7 @@
                     </div>
                     <div class="row">
                       <div class="col-12 d-flex justify-content-center">
-                          <%= f.button :submit, "Log in", class:"btn sign-custombtn btn-block" %>
+                          <%= f.button :submit, "Log in", class:"btn custombtn btn-block" %>
                       </div>
                     </div>
                   <% end %>
