--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
-    <%= favicon_link_tag asset_path('favicon-test.png') %>
+    <%= favicon_link_tag asset_path('logo_round_dark_green.png') %>
   </head>
 
   <body>
