added new favicon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
-    <%= favicon_link_tag asset_path('favicon-test.png') %>
+    <%= favicon_link_tag asset_path('chinampa_favicon.png') %>
   </head>
 
   <body>
