--- a/app/views/user_plants/show.html.erb
+++ b/app/views/user_plants/show.html.erb
@@ -70,7 +70,7 @@
         </div>
         <div class="p-2"><h2>More about your plant</h2></div>
         <div class="p-2"> <p><%= @user_plant.plant.description.html_safe %></p> </div>
-        <div class="p-2"><a href=<%= @user_plant.plant.wikipedia_link %>>LEARN MORE ></a></div>
+        <div class="p-2"><a href=<%= @user_plant.plant.wikipedia_link %> target="_blank">LEARN MORE ></a></div>
       </div>
     </div>
 
