killed btn working

--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -23,10 +23,10 @@
 </div>
   <div class="container">
     <div class="text">
-      <h2 style="color:#015D3A;"><strong>Only two steps away from happy and healthy plants!</strong></h2><br>
+      <h2 style="color:#015D3A"><strong>Only two steps away from happy and healthy plants!</strong></h2><br>
       <ul>
-        <p>1. Choose in this catalog the plant which corresponds to yours. The search bar is there to help you 👆</p>
-        <p>2. Give it a nickname and don't forget to add a picture!</p>
+        <p>1. <strong>Choose</strong> in this catalog the plant which corresponds to yours. The search bar is there to help you 👆</p>
+        <p>2. After <strong>adding it to your collection</strong>, give it a nickname and don't forget to add a picture!</p>
       </ul><br><br>
     </div>
     <div class="row">
