--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -57,6 +57,28 @@
   }
 }
 
+.killedbtn {
+  background-color: $mid-green;
+  color: $white-green;
+  border-radius: 4px !important;
+  text-decoration: none;
+  cursor: pointer;
+  width: 190px;
+  height: 40px !important;
+  font-size: 14px !important;
+  font-family: $links;
+  height: 34px !important;
+  margin-bottom: 14px;
+  margin-left: 78px;
+  &:hover {
+    background-color: $white-green;
+    border: 1px solid $mid-green;
+    color: $mid-green;
+    transition-duration: 0.3s;
+    text-decoration: none;
+  }
+}
+
 .linkform {
   color: $white-green;
   text-decoration: none;
