--- a/app/assets/stylesheets/components/_myplantcard.scss
+++ b/app/assets/stylesheets/components/_myplantcard.scss
@@ -1,22 +1,57 @@
-.myplantcard {
-  width: 100%;
-  height: 600px;
-  margin: auto;
-  border-radius: 6px;
-  transition: transform .5s;
-  &:hover {
-    text-decoration: none !important;
-    transform: scale(1.1);
-  }
-  img {
-    height: 70%;
-    object-fit: cover;
-  }
-  i {
-    font-size: 14px !important;
-  }
-}
+// .myplantcard {
+//   width: 100%;
+//   height: 600px;
+//   margin: auto;
+//   border-radius: 6px;
+//   transition: transform .5s;
+//   &:hover {
+//     text-decoration: none !important;
+//     transform: scale(1.1);
+//   }
+//   img {
+//     height: 70%;
+//     object-fit: cover;
+//   }
+//   i {
+//     font-size: 14px !important;
+//   }
+// }
+//
+// .card_link {
+//   text-decoration: none !important;
+// }
 
+.myplantcard {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    img {
+        height: 70%;
+        object-fit: cover;
+    }
+    i {
+        font-size: 14px !important;
+    }
+}
+.delete-plant-link {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+.card-plant-container {
+    width: 100%;
+    height: 600px;
+    position: relative;
+    transition: transform .5s;
+    margin: auto;
+    border-radius: 10px;
+    &:hover {
+        text-decoration: none !important;
+        transform: scale(1.1);
+    }
+}
 .card_link {
-  text-decoration: none !important;
+    text-decoration: none !important;
 }
