--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,4 +4,5 @@
 @import "confirm_plant";
 @import "add_plant";
 @import "add_plant_new";
-@import "_tutorial";
+@import "tutorial";
+@import "user_plants_index"
