--- a/app/views/user_plants/index.html.erb
+++ b/app/views/user_plants/index.html.erb
@@ -22,7 +22,6 @@
     </div>
   </div>
 </div>
-
 <div class="container">
   <div class="row">
     <% @user_plants.each do |plant| %>
@@ -39,9 +38,18 @@
             <h4> <strong><%= plant.nickname.upcase %></strong> </h4>
             <p><%= plant.family.name %></p>
             <div class="d-flex icone">
-              <div class="bd-highlight "><i class="fas fa-tint"> Every <%= plant.plant.water_frequency %> days</i></div>
-              <div class="bd-highlight mr-2 ml-2"><i class="fas fa-sun"> <%= plant.plant.light_frequency %>h/day</i></div>
-              <div class="bd-highlight"><i class="fas fa-seedling"> Every <%= plant.plant.fertilizer_frequency %> months</i></div>
+              <div class="bd-highlight d-flex">
+                <i class="fas fa-tint"></i>
+                <p class="ml-1">Every <%= plant.plant.water_frequency %> days</p>
+              </div>
+              <div class="bd-highlight d-flex ml-3 mr-3">
+                <i class="fas fa-sun"></i>
+                <p class="ml-1"><%= plant.plant.light_frequency %>h/day</p>
+              </div>
+              <div class="bd-highlight d-flex">
+                <i class="fas fa-seedling"></i>
+                <p class="ml-1">Every <%= plant.plant.fertilizer_frequency %> months</p>
+              </div>
             </div>
           </div>
         </div>
