tutorial video changed

--- a/app/assets/stylesheets/pages/_add_plant.scss
+++ b/app/assets/stylesheets/pages/_add_plant.scss
@@ -1,10 +1,10 @@
 .myplantcard-add-plant {
   width:90%;
   height: 450px;
-  background-color: $white-green;
+  // background-color: $white-green;
   // box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
   margin: auto;
-  border-radius: 6px;
+  border-radius: 4px;
   // border: none !important;
   transition: transform .5s;
   &:hover {
