--- a/app/assets/stylesheets/components/_myplantcard.scss
+++ b/app/assets/stylesheets/components/_myplantcard.scss
@@ -1,35 +1,15 @@
-// .myplantcard {
-//   width: 100%;
-//   height: 600px;
-//   margin: auto;
-//   border-radius: 6px;
-//   transition: transform .5s;
-//   &:hover {
-//     text-decoration: none !important;
-//     transform: scale(1.1);
-//   }
-//   img {
-//     height: 70%;
-//     object-fit: cover;
-//   }
-//   i {
-//     font-size: 14px !important;
-//   }
-// }
-//
-// .card_link {
-//   text-decoration: none !important;
-// }
-
 .myplantcard {
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     position: absolute;
+    border-radius: 4px !important;
     img {
         height: 70%;
         object-fit: cover;
+        border-top-left-radius: 4px !important;
+        border-top-right-radius: 4px !important;
     }
     i {
         font-size: 14px !important;
@@ -46,7 +26,6 @@
     position: relative;
     transition: transform .5s;
     margin: auto;
-    border-radius: 10px;
     &:hover {
         text-decoration: none !important;
         transform: scale(1.1);
