--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,10 +18,10 @@
   height: 256px;
   border-radius: 10px;
   box-shadow: -5px -5px 20px 2px rgba(0,0,0,0.1);
-  transition: transform .5s;
+  // transition: transform .5s;
   &:hover {
     text-decoration: none !important;
-    transform: scale(1.1);
+    // transform: scale(1.1);
   }
 }
 
