--- a/app/assets/stylesheets/pages/_tutorial.scss
+++ b/app/assets/stylesheets/pages/_tutorial.scss
@@ -31,9 +31,9 @@
 .tutorial-box-video {
   width: 710px;
   height: 420px;
-  background-color: $light-gray-green;
-  opacity: 90%;
-  box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
+  // background-color: $light-gray-green;
+  opacity: 95%;
+  // box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
   border-radius: 2px;
   margin-bottom: 30px;
 }
@@ -41,18 +41,11 @@
 .tutorial-box-second-video {
   width: 710px;
   height: 260px;
-  background-color: $light-gray-green;
-  opacity: 90%;
-  box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
+  // background-color: $light-gray-green;
+  opacity: 95%;
+  // box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
   border-radius: 2px;
   margin-bottom: 30px;
-}
-
-.round-pic {
-  width: 350px;
-  height: 250px;
-  object-fit: cover;
-  border-radius: 20px;
 }
 
 iframe {
