--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-8">
-      <div class="p-2 bd-highlight tutorial-box-video">
+      <div class="bd-highlight tutorial-box-video">
         <iframe width="700" height="400"
           src="https://www.youtube.com/embed/AMFV4kVQXb4"
           frameborder="0"
@@ -19,7 +19,7 @@
 
     <div class="col-sm">
       <div>
-        <h3><strong>How do I pick the right indoor plants? </strong>🌷🌼🌵</h3>
+        <h4><strong>How do I pick the right indoor plants?</strong>🌷🌼🌵</h4>
         <br>
         <p class="text-justify">
           Indoor plants are plants that grow indoors. There are a variety of tropical plants, like palms, that thrive in indoor environments.
@@ -45,7 +45,7 @@
   <div class="row">
     <div class="col-sm">
       <div>
-        <h1><strong> Basic Plant Caring </strong></h1>
+        <h4><strong> Basic Plant Caring </strong></h4>
         <br>
         <p class="text-justify">
           Here are some tips that will help you care for indoor plants:
@@ -60,7 +60,7 @@
     </div>
 
     <div class="col-sm">
-      <div class="p-2 bd-highlight tutorial-box-second-video">
+      <div class="bd-highlight tutorial-box-second-video">
         <iframe width="290" height="240"
           src="https://www.youtube.com/embed/zYaB2bKAKLg"
           frameborder="0"
@@ -85,7 +85,7 @@
   <div class="row">
     <div class="col-sm">
 
-      <div class="p-2 bd-highlight tutorial-box-video">
+      <div class="bd-highlight tutorial-box-video">
         <iframe width="700" height="400"
           src="https://www.youtube.com/embed/Jh5oX0VRnzk"
           frameborder="0"
@@ -106,8 +106,8 @@
 
     <div class="col-sm">
       <div>
-        <h1 class="text-center"><strong>PROPAGATION FOR</strong></h1>
-        <h1 class="text-center"><strong>BEGINNERS</strong></h1>
+        <h4 class="text-center"><strong>PROPAGATION FOR</strong></h4>
+        <h4 class="text-center"><strong>BEGINNERS</strong></h4>
         <br>
         <p class="text-justify">
           Go to a garden center and look for a fertilizer with “indoor plant” on the label. You will use less fertilizer for plants inside versus outside, so ensure you use the rate specified for indoor plants.
@@ -115,7 +115,7 @@
           <br>
         </p>
         <div class="d-flex justify-content-center">
-          <%= image_tag "https://www.ambius.com/blog/wp-content/uploads/2016/09/watering-plant-image-final.jpg", class: "round-pic"%>
+          <%= image_tag "https://www.ambius.com/blog/wp-content/uploads/2016/09/watering-plant-image-final.jpg", class: "rounded"%>
         </div>
         <br><br><br><br>
       </div>
