styled the video tutorials page

--- a/app/assets/stylesheets/pages/_tutorial.scss
+++ b/app/assets/stylesheets/pages/_tutorial.scss
@@ -34,7 +34,7 @@
   // background-color: $light-gray-green;
   opacity: 95%;
   // box-shadow: 0.2px 0.9px 0.9px 0.9px $dark-gray-green;
-  border-radius: 2px;
+  // border-radius: 2px;
   margin-bottom: 30px;
 }
 
