--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -3,8 +3,8 @@
     <h3 class="mt-4 catalogue-slogan-text">Plant care <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; tutorials</h3>
   </div>
 </div>
-
 <div class="container">
+  <h2><strong><u>How do I pick the right indoor plants?</u></strong>🌷🌼🌵</h2> <br>
   <div class="row">
     <div class="col-sm-8">
       <div class="bd-highlight tutorial-box-video">
@@ -16,75 +16,56 @@
         </iframe>
       </div>
     </div>
-
     <div class="col-sm">
-      <div>
-        <h4><strong>How do I pick the right indoor plants?</strong>🌷🌼🌵</h4>
+      <p class="text-justify">
+        Let's grow your indoor plants indoors!!<br>
+        Most of the time, indoor plants are already in containers, so no need to plant them.
         <br>
-        <p class="text-justify">
-          Indoor plants are plants that grow indoors. There are a variety of tropical plants, like palms, that thrive in indoor environments.
-          <br>
-          Most of the time, indoor plants are already in containers, so there is no need to plant them.
-          <br>
-          <br>
-          A good root system – This is incredibly important when choosing a plant. It’s not practical to pull a plant out of its pot to check its roots but if it is a small plant, this can be done.
-          <br>
-          Healthy roots are thick and light in color.
-          <br>
-          Foliage- Here’s a good rule of thumb when it comes to plant’s foliage: if you can’t see through it, the foliage is thick enough.
-          Check for disease – Some signs of a plant with pests or disease are: white dots, sticky residue on the leaves and a bad odor.
-        </p>
-      </div>
+        <br>
+        <strong>A good root system</strong> – This is incredibly important when choosing a plant. It’s not practical to pull a plant out of its pot to check its roots but if it is a small plant, this can be done.
+        Healthy roots are thick and light in color.
+        <br>
+        <strong>Foliage</strong> - Here’s a good rule of thumb when it comes to plant’s foliage: if you can’t see through it, the foliage is thick enough.
+        <strong>Check for disease</strong> – Some signs of a plant with pests or disease are: white dots, sticky residue on the leaves and a bad odor.
+      </p>
     </div>
   </div>
 </div>
-
-<div><br><br><br></div>
-
+<br>
 <div class="container">
+  <h2><strong><u>Basic Plant Caring</u></strong> 🌿</h2><br>
   <div class="row">
     <div class="col-sm">
-      <div>
-        <h4><strong> Basic Plant Caring </strong></h4>
-        <br>
+      <p class="text-justify">
+        Here are <strong>some tips</strong> that will help you care for your plants:
+        <ul><p>
+          <li>Keep potting soil moist- It’s important to make sure soil is not too wet nor too dry
+          <li>Make sure the plant pot has drainage holes in the bottom of the pot
+          <li>Place your plant near a light source, whether it’s natural or artificial
+          <li>Determine what species of plant you have so you can accurately care for it</p>
+        </ul>
         <p class="text-justify">
-          Here are some tips that will help you care for indoor plants:
-          <ul><p>
-            <li>Keep potting soil moist- It’s important to make sure soil is not too wet nor too dry
-            <li>Make sure the plant pot has drainage holes in the bottom of the pot
-            <li>Place your plant near a light source, whether it’s natural or artificial
-            <li>Determine what species of plant you have so you can accurately care for it</p>
-          </ul>
+          <strong>How do you prune indoor plants?</strong>
+          If you have no reason to prune plants, don’t do it. But, if you notice your plant getting tally and spindly, then we recommend you prune them.
         </p>
-      </div>
+      </p>
     </div>
-
     <div class="col-sm">
-      <div class="bd-highlight tutorial-box-second-video">
-        <iframe width="290" height="240"
+      <div class="bd-highlight tutorial-box-video">
+        <iframe width="700" height="400"
           src="https://www.youtube.com/embed/zYaB2bKAKLg"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
         </iframe>
       </div>
-
-      <div>
-        <p class="text-justify">
-          How do you prune indoor plants?
-          If you have no reason to prune plants, don’t do it. But, if you notice your plant getting tally and spindly, then we recommend you prune them.
-        </p>
-      </div>
     </div>
   </div>
 </div>
-
-<div><br><br><br></div>
-
 <div class="container">
+  <h2><strong> <u>Propagation for beginners</u> </strong> 🐛🐞</h2><br>
   <div class="row">
     <div class="col-sm">
-
       <div class="bd-highlight tutorial-box-video">
         <iframe width="700" height="400"
           src="https://www.youtube.com/embed/Jh5oX0VRnzk"
@@ -93,32 +74,22 @@
           allowfullscreen>
         </iframe>
       </div>
-      <div>
         <p class="text-justify">
-          How do I get rid of bugs on indoor plants?
-          <br>
-          <br>
-          Bugs on your indoor plants can be really annoying! If you spot pests, go to a garden center and purchase an insecticidal soap, which usually is contained in a spray bottle. When you notice bugs, spray the entire plant – the undersides and tops of the leaves as well as the stem. Next, wait about two weeks and repeat the spraying. Then, wait two more weeks and spray again.
-          You will want to spray three times because the soap usually will not eliminate eggs, which could hatch. If your plant is dealing with a severe infestation and you are unable to eradicate the pests, throw out the plant. You can also use a damp paper towel to remove a pest.
+        Don't forget : look for a fertilizer with the “indoor plant” label. You will use less fertilizer for plants inside versus outside, so ensure you use the rate specified for your indoor plants.
+        If you’re getting fertilizer for blooming plants, look for a fertilizer labeled with the type of plant (orchids, for example) – but if it is unclear which one you should pick, it’s fine to use fertilizer for houseplants.
         </p>
       </div>
-    </div>
-
     <div class="col-sm">
-      <div>
-        <h4 class="text-center"><strong>PROPAGATION FOR</strong></h4>
-        <h4 class="text-center"><strong>BEGINNERS</strong></h4>
-        <br>
-        <p class="text-justify">
-          Go to a garden center and look for a fertilizer with “indoor plant” on the label. You will use less fertilizer for plants inside versus outside, so ensure you use the rate specified for indoor plants.
-          If you’re getting fertilizer for blooming plants, look for a fertilizer labeled with the type of plant (orchids, for example) – but if it is unclear which one you should pick, it’s fine to use fertilizer for houseplants.
-          <br>
+      <p class="text-justify"><strong>How do I get rid of bugs on indoor plants?</strong><p><br>
+        Bugs on your indoor plants can be really annoying! If you spot pests, go to a garden center and purchase an insecticidal soap. When you notice bugs, spray the entire plant – the undersides and tops of the leaves as well as the stem. Next, wait about two weeks and repeat the spraying. Then, wait two more weeks and spray again.
+          <strong>You will need to spray three times</strong> because the soap usually will not eliminate eggs, which could hatch. If your plant is dealing with a severe infestation and you are unable to eradicate the pests, throw out the plant. You can also use a damp paper towel to remove a pest.
         </p>
-        <div class="d-flex justify-content-center">
-          <%= image_tag "https://www.ambius.com/blog/wp-content/uploads/2016/09/watering-plant-image-final.jpg", class: "rounded"%>
-        </div>
-        <br><br><br><br>
+        <br>
+      </p>
+      <div class="d-flex justify-content-center">
+        <%= image_tag "https://www.ambius.com/blog/wp-content/uploads/2016/09/watering-plant-image-final.jpg", class: "rounded"%>
       </div>
+      <br><br><br><br>
     </div>
   </div>
 </div>
